fixed save button not showing pointer

--- a/styles/id.module.scss
+++ b/styles/id.module.scss
@@ -89,6 +89,7 @@
 	border-radius: 5px;
 
 	&:hover {
-		background: rgb(134, 134, 134)
+		background: rgb(134, 134, 134);
+		cursor: pointer;
 	}
 }
